# C2-VAESDE-ADSB-TRAINING

./: .gitignore  README.md  pyproject.toml  run_c2_chain.sh  stage_01_train_sequence_vae.py  stage_02_stress_test_sequence_vae.py  stage_03_calibrate_motion_prior_thresholds.py  stage_04_motion_prior_scorer.py
configs/: default.yaml
data/: normalisation_mean.csv  normalisation_std.csv
docs/: results.md
scripts/: run_calibrate.py  run_score.py  run_stress_test.py  run_train.py
src/vaesde/: __init__.py  constants.py  corruption.py  inference.py  io_utils.py  kinematics.py  model.py  normalisation.py  training.py
src/vaesde/reporting/: __init__.py  calibrate.py  score.py  stress_test.py  train.py
tests/: test_smoke.py
