[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vaesde"
version = "0.1.0"
description = "VAE-based sequence anomaly detection for ENU trajectory windows"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "torch",
    "pyyaml",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
extraPaths = ["src"]
